<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="contract">Пользователькое соглашение</string>
    <string name="my_email">danilatheripper@ya.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_to_ya_dev">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="link_to_contract">https://yandex.ru/legal/practicum_offer</string>
    <string name="empty_find">Ничего не нашлось</string>
    <string name="bad_internet1">Проблемы со связью</string>
    <string name="bad_internet2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="clearFindHistory">Очистить историю</string>
    <string name="history">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="random_time">0:30</string>
</resources>