<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="@dimen/icon_padding8"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        style="@style/txtWhiteMedium22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_padding8"
        android:paddingTop="6dp"
        android:paddingBottom="32dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_schearsh"
        style="@style/btnMain"
        android:text="@string/search"
        app:icon="@drawable/ic_find"
        app:layout_constraintBottom_toTopOf="@id/btn_media"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_media"
        style="@style/btnMain"
        android:text="@string/mediateka"
        app:icon="@drawable/ic_media"
        app:layout_constraintBottom_toTopOf="@id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_schearsh" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/btnMain"
        android:text="@string/settings"
        app:icon="@drawable/ic_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_media" />

</androidx.constraintlayout.widget.ConstraintLayout>