<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/settings_top_bar"
        android:padding="@dimen/main_padding_radius"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/padding_24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:paddingEnd="@dimen/padding_24dp"
            android:layout_gravity="center"/>

        <TextView
            style="@style/btnText22medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_theme_toogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="@dimen/main_padding_radius"
        android:text="@string/dark_theme"
        android:theme="@style/MySwitch"
        app:layout_constraintTop_toBottomOf="@id/settings_top_bar" />

    <FrameLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_theme_toogle"
        android:padding="@dimen/main_padding_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="@style/txtRegular16"
             />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_share"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share"
        android:padding="@dimen/main_padding_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            style="@style/txtRegular16"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_support"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_support"
        android:padding="@dimen/main_padding_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contract"
            style="@style/txtRegular16"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_forward"
            android:layout_gravity="end"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>