<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaActivity">

    <TextView
        android:id="@+id/media_top_bar"
        style="@style/btnText22medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp24"
        android:padding="@dimen/dp16"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/track_big_image"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media_top_bar" />

    <TextView
        android:id="@+id/track_name"
        style="@style/btnText22medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="@dimen/dp24"
        android:paddingTop="@dimen/dp24"
        android:paddingEnd="@dimen/dp24"
        android:singleLine="true"
        android:textFontWeight="400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_big_image" />

    <TextView
        android:id="@+id/track_auctor"
        style="@style/text14blackwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp24"
        android:paddingTop="@dimen/dp12"
        android:textFontWeight="400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_name" />

    <ImageView
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_btn_add_to_playlist"
        app:layout_constraintBottom_toTopOf="@id/currentTime"
        app:layout_constraintEnd_toStartOf="@id/btn_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_auctor" />

    <ImageView
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_btn_play"
        app:layout_constraintBottom_toTopOf="@id/currentTime"
        app:layout_constraintEnd_toStartOf="@id/btn_favorite"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/track_auctor" />

    <ImageView
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp8"
        android:src="@drawable/img_button_favorite"
        app:layout_constraintBottom_toTopOf="@id/currentTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_play"
        app:layout_constraintTop_toBottomOf="@id/track_auctor" />

    <TextView
        android:id="@+id/currentTime"
        style="@style/text14blackwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp8"
        android:text="@string/random_time"
        android:textFontWeight="500"
        app:layout_constraintBottom_toTopOf="@id/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play" />

    <TextView
        android:id="@+id/duration"
        style="@style/text13gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentTime" />

    <TextView
        android:id="@+id/track_duration"
        style="@style/text13blackwhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/currentTime" />

    <TextView
        android:id="@+id/album"
        style="@style/text13gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/track_album"
        style="@style/text13blackwhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/track_duration" />

    <TextView
        android:id="@+id/year"
        style="@style/text13gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/track_year"
        style="@style/text13blackwhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/track_album"
        tools:text="dkjfdkvjn" />

    <TextView
        android:id="@+id/genre"
        style="@style/text13gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/track_genre"
        style="@style/text13blackwhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/track_year" />

    <TextView
        android:id="@+id/country"
        style="@style/text13gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/track_country"
        style="@style/text13blackwhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/track_genre" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="103dp" />

</androidx.constraintlayout.widget.ConstraintLayout>